--- a/pages/redes.html
+++ b/pages/redes.html
@@ -18,7 +18,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 button_bootstrap">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="../Index.html">INICIO</a>
+                        <a class="nav-link" aria-current="page" href="../index.html">INICIO</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./quien_soy.html">¿QUIEN SOY?</a>
