añadi sass al proyecto

--- a/pages/quien_soy.html
+++ b/pages/quien_soy.html
@@ -41,7 +41,7 @@
     <main class = "main">
         <h1 class = "title">¿QUIEN ES OLI?</h1>
         <div>
-          <img src="../img/Imagenes/Ilustraciones-diversas/logo.jpg" alt="" class="logo_img">
+          <img src="../img/Imagenes/Ilustraciones-diversas/logo.jpg" alt="">
         </div>
         
         <p class = "parrafo">Bienvenidos a la página web de <span>Pablo Olivero</span>, un destacado dibujante y director de animación. Con una vasta experiencia en la industria del entretenimiento, Pablo ha dejado su marca en el mundo de la    
