--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <section class="redes_block">
         <a href="https://www.instagram.com/oli_ilustrador/?hl=es"><img src="./img/Logos/instagram.png" alt="instagram"></a>
         <a href="https://www.instagram.com/fiesta.oli/"><img src="./img/Logos/instagram.png" alt="instagram 2"></a>
-        <a href=""><img src="../img/Logos/instagram.png" alt="instagram 3"></a>
+        <a href=""><img src="./img/Logos/instagram.png" alt="instagram 3"></a>
         <a href="https://ar.pinterest.com/oliilustrador/"><img src="./img/Logos/pinterest.png" alt="pinterest"></a>
         <a href="https://ar.linkedin.com/in/pablo-olivero-565a4311?original_referer=https%3A%2F%2Fwww.google.com%2F"><img src="./img/Logos/linkedin.png" alt="linkedin"></a>
       </section>
