--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
       </div>
       
       <div class="redes_block">
-        <a href="https://www.instagram.com/oli_ilustrador/?hl=es" target="_blank"><img src="../img/Logos/instagram.png" alt="instagram"></a>
-        <a href="https://www.instagram.com/fiesta.oli/" target="_blank"><img src="../img/Logos/instagram.png" alt="instagram 2"></a>
-        <a href="https://ar.pinterest.com/oliilustrador/" target="_blank"><img src="../img/Logos/pinterest.png" alt="pinterest"></a>
-        <a href="https://www.behance.net/ARTofOLI" target="_blank"><img src="../img/Logos/behance.png" alt="behance"></a>
-        <a href="https://ar.linkedin.com/in/pablo-olivero-565a4311?original_referer=https%3A%2F%2Fwww.google.com%2F" target="_blank"><img src="../img/Logos/linkedin.png" alt="linkedin"></a>
+        <a href="https://www.instagram.com/oli_ilustrador/?hl=es" target="_blank"><img src="./img/Logos/instagram.png" alt="instagram"></a>
+        <a href="https://www.instagram.com/fiesta.oli/" target="_blank"><img src="./img/Logos/instagram.png" alt="instagram 2"></a>
+        <a href="https://ar.pinterest.com/oliilustrador/" target="_blank"><img src="./img/Logos/pinterest.png" alt="pinterest"></a>
+        <a href="https://www.behance.net/ARTofOLI" target="_blank"><img src="./img/Logos/behance.png" alt="behance"></a>
+        <a href="https://ar.linkedin.com/in/pablo-olivero-565a4311?original_referer=https%3A%2F%2Fwww.google.com%2F" target="_blank"><img src="./img/Logos/linkedin.png" alt="linkedin"></a>
       </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
