--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -39,29 +39,7 @@
   </header>
     <main class = "main_portfolio">
         <h1 class = "title">PORTFOLIO</h1>
-        <!--
-        <div id="carouselExample" class="carousel slide hide_until_finish">
-          <div class="carousel-inner">
-            <div class="carousel-item active img_carousel">
-              <img src="../img/Imagenes/Ilustraciones-diversas/Header_Linkedin.jpeg" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item img_carousel">
-              <img src="../img/Happy-names/IMG_20211214_075540_482.jpg" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item img_carousel">
-              <img src="../img/Imagenes/No-tan-blancanieves/IMG-20210906-WA0168.jpg" class="d-block w-100" alt="...">
-            </div>
-          </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
-        </div>
-        tengo q implementarlo-->
+        
         <section class = "cards_port">
           
           <div class="card" style="width: 18rem;">
@@ -294,7 +272,6 @@
                   <img src="../img/Imagenes/que_com_hoy/FIDEOOS2.jpg" alt="Fideos con salsa">
                   <img src="../img/Imagenes/que_com_hoy/Salchicha.jpg" alt="Salchichas">
                   <img src="../img/Imagenes/que_com_hoy/Salchicha3.jpg" alt="Salchichas">
-                  <img src="../img/Imagenes/que_com_hoy/Salchicha2.jpg" alt="Salchichas">
                   <img src="../img/Imagenes/que_com_hoy/SOPA.jpg" alt="sopa">
                   <img src="../img/Imagenes/que_com_hoy/Sopa (2).jpg" alt="sopa">
                   <img src="../img/Imagenes/que_com_hoy/pure.jpg" alt="pure">
@@ -315,7 +292,7 @@
           <img src="../img/Imagenes/No-tan-blancanieves/IMG_20211031_102822_164.jpg" alt="NO TAN BLANCANIEVES">
           <img src="../img/Imagenes/No-tan-blancanieves/IMG_20211031_102821_889.jpg" alt="NO TAN BLANCANIEVES">
           <img src="../img/Imagenes/No-tan-blancanieves/IMG_20211031_102821_990.jpg" alt="NO TAN BLANCANIEVES">
-          <img src="../img/Imagenes/No-tan-blancanieves/IMG_20211031_102822_071.jpg" alt="NO TAN BLANCANIEVES">
+          <img src="../img/Imagenes/No-tan-blancanieves/notan.jpg" alt="NO TAN BLANCANIEVES">
           <img src="../img/Imagenes/No-tan-blancanieves/IMG_20211031_102822_028.jpg" alt="NO TAN BLANCANIEVES">
           <img src="../img/Imagenes/No-tan-blancanieves/IMG_20211031_102822_099.jpg" alt="NO TAN BLANCANIEVES">
         </div>
@@ -379,7 +356,7 @@
           <img src="../img/Imagenes/Sigmar/Sigmar20152.jpg" alt="SIGMAR">
           <img src="../img/Imagenes/Sigmar/Sigmar20153.jpg" alt="SIGMAR">
           <img src="../img/Imagenes/Sigmar/Sigmar20154.jpg" alt="SIGMAR">
-          <img src="../img/Imagenes/Sigmar/Sigmar20155.jpg" alt="SIGMAR">
+          <img src="../img/Imagenes/Sigmar/Sigmar20155.jpg" alt="SIGMAR" class="certificado_sig">
         </div>
       </section>
               </div>
