--- a/pages/contactos.html
+++ b/pages/contactos.html
@@ -39,7 +39,7 @@
   </header>
     <main class = "main">
         <form action="">
-            <legend class = "contact_title">¡CONTACTAME!</legend>
+            <legend class = "contact_title">CONTACTAME</legend>
             <div class = "contact_form">
               <div class = "input_form">
                   <label for="">TU NOMBRE</label>
