--- a/pages/quien_soy.html
+++ b/pages/quien_soy.html
@@ -20,6 +20,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0 button_bootstrap ">
+            <li class="nav-item dropdown">
+              <a class="nav-link color" href="../index.html">HOME</a>
+            </li>
             <li class="nav-item">
               <a class="nav-link is_active" href="./quien_soy.html">¿QUIEN SOY?</a>
             </li>
@@ -41,7 +44,7 @@
     <main class = "main">
         <h1 class = "title">¿QUIEN ES OLI?</h1>
         <div>
-          <img src="../img/Imagenes/Ilustraciones-diversas/logo.jpg" alt="">
+          <img src="../img/Imagenes/Ilustraciones-diversas/logo.jpg" alt="Un dibujo realizado por oli ilustrador">
         </div>
         
         <p class = "parrafo">Bienvenidos a la página web de <span>Pablo Olivero</span>, un destacado dibujante y director de animación. Con una vasta experiencia en la industria del entretenimiento, Pablo ha dejado su marca en el mundo de la animación, siendo reconocido por su talento y creatividad.</p>
@@ -60,11 +63,11 @@
       </div>
       
       <div class="redes_block">
-        <a href="https://www.instagram.com/oli_ilustrador/?hl=es" target="_blank"><img src="../img/Logos/instagram.png" alt="instagram"></a>
-        <a href="https://www.instagram.com/fiesta.oli/" target="_blank"><img src="../img/Logos/instagram.png" alt="instagram 2"></a>
-        <a href="https://ar.pinterest.com/oliilustrador/" target="_blank"><img src="../img/Logos/pinterest.png" alt="pinterest"></a>
-        <a href="https://www.behance.net/ARTofOLI" target="_blank"><img src="../img/Logos/behance.png" alt="behance"></a>
-        <a href="https://ar.linkedin.com/in/pablo-olivero-565a4311?original_referer=https%3A%2F%2Fwww.google.com%2F" target="_blank"><img src="../img/Logos/linkedin.png" alt="linkedin"></a>
+        <a href="https://www.instagram.com/oli_ilustrador/?hl=es" target="_blank"><img src="../img/Logos/instagram.png" alt="instagram de oli ilustrador"></a>
+        <a href="https://www.instagram.com/fiesta.oli/" target="_blank"><img src="../img/Logos/instagram.png" alt="instagram del emprendimiento de tu nombre feliz, por oli ilustrador"></a>
+        <a href="https://ar.pinterest.com/oliilustrador/" target="_blank"><img src="../img/Logos/pinterest.png" alt="pinterest de oli ilustrador"></a>
+        <a href="https://www.behance.net/ARTofOLI" target="_blank"><img src="../img/Logos/behance.png" alt="behance de oli ilustrador"></a>
+        <a href="https://ar.linkedin.com/in/pablo-olivero-565a4311?original_referer=https%3A%2F%2Fwww.google.com%2F" target="_blank"><img src="../img/Logos/linkedin.png" alt="linkedin de oli ilustrador"></a>
       </div>
     </footer>
 
