--- a/index.html
+++ b/index.html
@@ -13,12 +13,15 @@
     <header>
       <nav class="navbar navbar-expand-lg  nav_bar"data-bs-theme="dark">
         <div class="container-fluid">
-          <a class="navbar-brand is_active" href="./index.html">OliIlustrador</a>
+          <a class="navbar-brand color" href="./index.html">OliIlustrador</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 button_bootstrap ">
+              <li class="nav-item dropdown">
+                <a class="nav-link is_active" href="../index.html">HOME</a>
+              </li>
               <li class="nav-item">
                 <a class="nav-link color" href="./pages/quien_soy.html">¿QUIEN SOY?</a>
               </li>
@@ -62,11 +65,11 @@
       </div>
       
       <div class="redes_block">
-        <a href="https://www.instagram.com/oli_ilustrador/?hl=es" target="_blank"><img src="./img/Logos/instagram.png" alt="instagram"></a>
-        <a href="https://www.instagram.com/fiesta.oli/" target="_blank"><img src="./img/Logos/instagram.png" alt="instagram 2"></a>
-        <a href="https://ar.pinterest.com/oliilustrador/" target="_blank"><img src="./img/Logos/pinterest.png" alt="pinterest"></a>
-        <a href="https://www.behance.net/ARTofOLI" target="_blank"><img src="./img/Logos/behance.png" alt="behance"></a>
-        <a href="https://ar.linkedin.com/in/pablo-olivero-565a4311?original_referer=https%3A%2F%2Fwww.google.com%2F" target="_blank"><img src="./img/Logos/linkedin.png" alt="linkedin"></a>
+        <a href="https://www.instagram.com/oli_ilustrador/?hl=es" target="_blank"><img src="../img/Logos/instagram.png" alt="instagram de oli ilustrador"></a>
+        <a href="https://www.instagram.com/fiesta.oli/" target="_blank"><img src="../img/Logos/instagram.png" alt="instagram del emprendimiento de tu nombre feliz, por oli ilustrador"></a>
+        <a href="https://ar.pinterest.com/oliilustrador/" target="_blank"><img src="../img/Logos/pinterest.png" alt="pinterest de oli ilustrador"></a>
+        <a href="https://www.behance.net/ARTofOLI" target="_blank"><img src="../img/Logos/behance.png" alt="behance de oli ilustrador"></a>
+        <a href="https://ar.linkedin.com/in/pablo-olivero-565a4311?original_referer=https%3A%2F%2Fwww.google.com%2F" target="_blank"><img src="../img/Logos/linkedin.png" alt="linkedin de oli ilustrador"></a>
       </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
