--- a/pages/resume.html
+++ b/pages/resume.html
@@ -20,6 +20,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0 button_bootstrap ">
+            <li class="nav-item dropdown">
+              <a class="nav-link color" href="../index.html">HOME</a>
+            </li>
             <li class="nav-item">
               <a class="nav-link color" href="./quien_soy.html">¿QUIEN SOY?</a>
             </li>
@@ -47,7 +50,7 @@
               <ul class = "resume_list_software">
                   <li>
                     Photoshop
-                    <img src="../img/Logos/photoshop.png" alt="photoshop logo">
+                    <img src="../img/Logos/photoshop.png" alt="logo de photoshop">
                   </li>
               </ul>
             </section>
@@ -57,7 +60,6 @@
                   <li>Director de proyectos.</li>
                     <li>Ilustraciones para novelas infantiles.</li>
                     <li>Ilustraciones para manuales escolares.</li>
-                    
                 </ul>
             </section>
             <section>
@@ -112,11 +114,11 @@
       </div>
       
       <div class="redes_block">
-        <a href="https://www.instagram.com/oli_ilustrador/?hl=es" target="_blank"><img src="../img/Logos/instagram.png" alt="instagram"></a>
-        <a href="https://www.instagram.com/fiesta.oli/" target="_blank"><img src="../img/Logos/instagram.png" alt="instagram 2"></a>
-        <a href="https://ar.pinterest.com/oliilustrador/" target="_blank"><img src="../img/Logos/pinterest.png" alt="pinterest"></a>
-        <a href="https://www.behance.net/ARTofOLI" target="_blank"><img src="../img/Logos/behance.png" alt="behance"></a>
-        <a href="https://ar.linkedin.com/in/pablo-olivero-565a4311?original_referer=https%3A%2F%2Fwww.google.com%2F" target="_blank"><img src="../img/Logos/linkedin.png" alt="linkedin"></a>
+        <a href="https://www.instagram.com/oli_ilustrador/?hl=es" target="_blank"><img src="../img/Logos/instagram.png" alt="instagram de oli ilustrador"></a>
+        <a href="https://www.instagram.com/fiesta.oli/" target="_blank"><img src="../img/Logos/instagram.png" alt="instagram del emprendimiento de tu nombre feliz, por oli ilustrador"></a>
+        <a href="https://ar.pinterest.com/oliilustrador/" target="_blank"><img src="../img/Logos/pinterest.png" alt="pinterest de oli ilustrador"></a>
+        <a href="https://www.behance.net/ARTofOLI" target="_blank"><img src="../img/Logos/behance.png" alt="behance de oli ilustrador"></a>
+        <a href="https://ar.linkedin.com/in/pablo-olivero-565a4311?original_referer=https%3A%2F%2Fwww.google.com%2F" target="_blank"><img src="../img/Logos/linkedin.png" alt="linkedin de oli ilustrador"></a>
       </div>
       </footer>
 
