--- a/pages/contactos.html
+++ b/pages/contactos.html
@@ -63,7 +63,6 @@
                 </div>
                 </div>
               
-              
               <div class = "button_inputs">
                 <input type="submit" value="Enviar" class="btn btn-danger button_input_1">
                 <input type="reset" value="Reset" class="btn btn-danger button_input_2">
@@ -82,6 +81,13 @@
         <a href="https://ar.pinterest.com/oliilustrador/" target="_blank"><img src="../img/Logos/pinterest.png" alt="pinterest de oli ilustrador"></a>
         <a href="https://www.behance.net/ARTofOLI" target="_blank"><img src="../img/Logos/behance.png" alt="behance de oli ilustrador"></a>
         <a href="https://ar.linkedin.com/in/pablo-olivero-565a4311?original_referer=https%3A%2F%2Fwww.google.com%2F" target="_blank"><img src="../img/Logos/linkedin.png" alt="linkedin de oli ilustrador"></a>
+      </div>
+      <div class="libr_pages">
+        <a href="../index.html">HOME</a>
+        <a href="./quien_soy.html">¿QUIEN SOY?</a>
+        <a href="./portfolio.html">PORTAFOLIO</a>
+        <a href="./resume.html">CURRICULUM</a>
+        <a href="./contactos.html">CONTACTO</a>
       </div>
     </footer>
 
