--- a/index.html
+++ b/index.html
@@ -71,6 +71,13 @@
         <a href="https://www.behance.net/ARTofOLI" target="_blank"><img src="../img/Logos/behance.png" alt="behance de oli ilustrador"></a>
         <a href="https://ar.linkedin.com/in/pablo-olivero-565a4311?original_referer=https%3A%2F%2Fwww.google.com%2F" target="_blank"><img src="../img/Logos/linkedin.png" alt="linkedin de oli ilustrador"></a>
       </div>
+      <div class="libr_pages">
+        <a href="./index.html">HOME</a>
+        <a href="./pages/quien_soy.html">¿QUIEN SOY?</a>
+        <a href="./pages/portfolio.html">PORTAFOLIO</a>
+        <a href="./pages/resume.html">CURRICULUM</a>
+        <a href="./pages/contactos.html">CONTACTO</a>
+      </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
