--- a/pages/contactos.html
+++ b/pages/contactos.html
@@ -20,13 +20,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0 button_bootstrap ">
             <li class="nav-item dropdown">
-              <a class="nav-link color" href="../index.html">HOME</a>
+              <a class="nav-link color" href="../index.html">INICIO</a>
             </li>
             <li class="nav-item">
               <a class="nav-link color" href="./quien_soy.html">¿QUIEN SOY?</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link color" href="./resume.html">RESUME</a>
+              <a class="nav-link color" href="./resume.html">CURRICULUM</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link color" href="./portfolio.html">PORTFOLIO</a>
@@ -83,7 +83,7 @@
         <a href="https://ar.linkedin.com/in/pablo-olivero-565a4311?original_referer=https%3A%2F%2Fwww.google.com%2F" target="_blank"><img src="../img/Logos/linkedin.png" alt="linkedin de oli ilustrador"></a>
       </div>
       <div class="libr_pages">
-        <a href="../index.html">HOME</a>
+        <a href="../index.html">INICIO</a>
         <a href="./quien_soy.html">¿QUIEN SOY?</a>
         <a href="./portfolio.html">PORTAFOLIO</a>
         <a href="./resume.html">CURRICULUM</a>
