--- a/pages/resume.html
+++ b/pages/resume.html
@@ -21,13 +21,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0 button_bootstrap ">
             <li class="nav-item dropdown">
-              <a class="nav-link color" href="../index.html">HOME</a>
+              <a class="nav-link color" href="../index.html">INICIO</a>
             </li>
             <li class="nav-item">
               <a class="nav-link color" href="./quien_soy.html">¿QUIEN SOY?</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link is_active" href="./resume.html">RESUME</a>
+              <a class="nav-link is_active" href="./resume.html">CURRICULUM</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link color" href="./portfolio.html">PORTFOLIO</a>
@@ -97,12 +97,14 @@
                           <li>
                             Ilustraciones para manuales escolares de primer ciclo para Ed. Santillana (Brasil), Editorial Mandioca, Ed. SM (Argentina), Tinta Fresca Ediciones, SM Ediciones (Puerto Rico).
                           </li>
+                          <li>
+                            Director de proyectos en mundoloco CGI
+                          </li>
                         </ul>
                         
                       </div> 
                       
                       </li>
-                    <li><div>-MUNDOLOCO CGI</div></li>
                 </ul>
             </section>
         </div>
@@ -121,7 +123,7 @@
         <a href="https://ar.linkedin.com/in/pablo-olivero-565a4311?original_referer=https%3A%2F%2Fwww.google.com%2F" target="_blank"><img src="../img/Logos/linkedin.png" alt="linkedin de oli ilustrador"></a>
       </div>
       <div class="libr_pages">
-        <a href="../index.html">HOME</a>
+        <a href="../index.html">INICIO</a>
         <a href="./quien_soy.html">¿QUIEN SOY?</a>
         <a href="./portfolio.html">PORTAFOLIO</a>
         <a href="./resume.html">CURRICULUM</a>
